Optimize erupt code